--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
-    "dbstart": " mkdir -p mongodlog &&  touch ./mongodlog/mongod.log && mongod --dbpath dbdata --fork --logpath mongodlog/mongod.log ",
+    "dbstart": "mkdir -p dbdata && mkdir -p mongodlog &&  touch ./mongodlog/mongod.log && mongod --dbpath dbdata --fork --logpath mongodlog/mongod.log ",
     "start": "node server.js",
     "dbstop": "mongo admin --eval 'db.shutdownServer()' "
   },
